--- a/www/index.html
+++ b/www/index.html
@@ -13,8 +13,6 @@
   <body data-main-app ng-cloak layout="row">
 
     <div layout="column" tabIndex="-1" role="main" flex>
-
-
       <md-toolbar layout="row">
         <div class="md-toolbar-tools">
           <h3>
@@ -23,28 +21,20 @@
         </div>
       </md-toolbar>
 
-      <md-content md-theme="docs-dark" class="md-padding" layout="row" layout-sm="column">
-        <md-input-container>
-          <label>Title</label>
-          <input ng-model="user.title">
-        </md-input-container>
-        <md-input-container>
-          <label>Email</label>
-          <input ng-model="user.email" type="email">
-        </md-input-container>
-      </md-content>
-      <md-content class="md-padding">
+      <md-content md-theme="docs-dark" class="md-padding">
         <form name="userForm">
+
           <div layout layout-sm="column">
-            <md-input-container style="width:80%">
-                <label>Company (Disabled)</label>
-                <input ng-model="user.company" disabled>
-              </md-input-container>
+            <md-input-container flex>
+              <label>Company (Disabled)</label>
+              <input ng-model="user.company" disabled>
+            </md-input-container>
             <md-input-container flex>
               <label>Submission Date</label>
               <input type="date" ng-model="user.submissionDate">
             </md-input-container>
           </div>
+
           <div layout layout-sm="column">
             <md-input-container flex>
               <label>First Name</label>
@@ -55,10 +45,23 @@
               <input ng-model="theMax">
             </md-input-container>
           </div>
+
+          <div layout layout-sm="column">
+            <md-input-container flex>
+              <label>Title</label>
+              <input ng-model="user.title">
+            </md-input-container>
+            <md-input-container flex>
+              <label>Email</label>
+              <input ng-model="user.email" type="email">
+            </md-input-container>
+          </div>
+
           <md-input-container flex>
             <label>Address</label>
             <input ng-model="user.address">
           </md-input-container>
+
           <div layout layout-sm="column">
             <md-input-container flex>
               <label>City</label>
@@ -73,6 +76,7 @@
               <input ng-model="user.postalCode">
             </md-input-container>
           </div>
+
           <md-input-container flex>
             <label>Biography</label>
             <textarea ng-model="user.biography" columns="1" md-maxlength="150"></textarea>
