--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
   <body data-main-app ng-cloak layout="row">
 
     <div layout="column" tabIndex="-1" role="main" flex>
+
       <md-toolbar layout="row">
         <div class="md-toolbar-tools">
           <h3>
@@ -21,7 +22,8 @@
         </div>
       </md-toolbar>
 
-      <md-content md-theme="docs-dark" class="md-padding">
+      <md-content class="md-padding">
+
         <form name="userForm">
 
           <div layout layout-sm="column">
