chore(meta): add title and meta description

--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html data-main-app ng-controller="HomeController">
   <head>
+    <title>Vincent Briglia</title>
     <meta charset="utf-8">
+    <meta name="description" content="Designer/Programmer aimed at developing interactive web applications. Experience in full-stack solutions. Strong Interest in Usability and advocating its importance by creating appealing user-friendly applications.">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <style>
       [ng-cloak] {
